--- a/_config.yml
+++ b/_config.yml
@@ -259,19 +259,19 @@ timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database
 
 
 # Plugins
-plugins:
-  - jekyll-paginate
+#plugins:
+#  - jekyll-paginate
 #  - jekyll-sitemap
-  - jekyll-gist
+#  - jekyll-gist
 #  - jekyll-feed
-  - jekyll-redirect-from
+#  - jekyll-redirect-from
 # mimic GitHub Pages with --safe
-whitelist:
-  - jekyll-paginate
+#whitelist:
+#  - jekyll-paginate
 #  - jekyll-sitemap
-  - jekyll-gist
+#  - jekyll-gist
 #  - jekyll-feed
-  - jemoji
+#  - jemoji
 
 
 # Archives
