--- a/_config.yml
+++ b/_config.yml
@@ -184,9 +184,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
-  #talks:
-  #  output: false
-  #  permalink: /:collection/:path/
+  talks:
+    output: false
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -237,13 +237,14 @@ defaults:
       share: true
       comment: true
   # _talks
- # - scope:
- #     path: ""
- #     type: talks
- #   values:
- #     layout: talk
- #     author_profile: true
- #     share: true
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      author_profile: true
+      share: true
+      published: false
 
 # Sass/SCSS
 sass:
